--- a/src/analysis/views/index.ejs
+++ b/src/analysis/views/index.ejs
@@ -17,6 +17,7 @@
 	<link href="./css/internal.css" rel="stylesheet" type="text/css" />
 	<link href="./modules.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/mobile.css">
 	<link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
