--- a/src/analysis/public/css/style.css
+++ b/src/analysis/public/css/style.css
@@ -492,3 +492,43 @@ body {
 
   
 }
+@media screen and (max-width: 768px) {
+  #app {
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30vw auto;
+    grid-template-rows: 50px 55px auto;
+    transition: 0.3s visibility, opacity;
+    opacity: 0;
+    visibility: hidden;
+    background-color: var(--bg);
+    overflow: hidden;
+  }
+  
+  #menu {
+    height: 100%;
+    width: 30vw;
+  }
+  
+  #sidebar {
+      grid-area: 3 / 1 / 4 / 2;
+      width: 30vw;
+      background-color: var(--bg-alt);
+      padding: 16px;
+      height: calc(100vh - 75px);
+      overflow: auto;
+      display: grid;
+      min-height: 0;
+      grid-template-rows: auto auto 1fr;
+    }
+
+    #logo-img {
+      height: 30px;;
+    }
+    
+    #logo-text {
+      color: white;
+      font-size: 2rem;
+    }
+}
