--- a/src/analysis/public/css/style.css
+++ b/src/analysis/public/css/style.css
@@ -531,4 +531,40 @@ body {
       color: white;
       font-size: 2rem;
     }
+
+    
+  #team-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow: auto;
+    padding-right: 2px;
+  }
+
+  #search-input {
+    border-radius: var(--border-radius);
+    border: none;
+    width: 100%;
+    height: 50px;
+    font-size: 1.1rem;
+    padding: 0 40px 0 12px;
+    background-color: var(--bg);
+    border: 1px solid var(--accent-alt);
+  }
+
+  #search-icon {
+    position: absolute;
+    top: 50%;
+    right: 12px;
+    font-size: 1rem;
+    transform: translateY(-50%);
+    transition: 0.3s color;
+  }
+
+  #dashboard {
+    grid-area: 1 / 2 / 4 / 4;
+    overflow: hidden;
+    position: relative;
+  }
+
 }
