--- a/src/scouting/views/pages/landing.ejs
+++ b/src/scouting/views/pages/landing.ejs
@@ -18,7 +18,14 @@
     </div>
     <div class="manual active">
       <i class="fas fa-pen-square"></i>
-      <span>Sign in Manually</span>
+      <span>Sign in   </span>
+      </div>
+    <div class="manual active">
+      <i class="fas fa-pen-square"></i>
+      <span>buttopn   </span>
+            </div>
+      <div class="button-outside">
+        <button class="buttonz" onclick="goto()">Go To Analysis</button>
     </div>
   </div>
 </div>
