--- a/src/scouting/public/css/match-scouting.css
+++ b/src/scouting/public/css/match-scouting.css
@@ -49,40 +49,40 @@
 }
 
 .silver {
-  border: 3px solid #2d2d2d;
-  background-color: #919191;
+  border: 3px solid #ff0000;
+  background-color: #ff0000;
 }
 
 .green {
-  background-color: #4caf50;
+  background-color: #ff0000;
 }
 
 .orange {
-  background-color: #ef6c00;
+  background-color: #ff0000;
 }
 
 .red {
-  background-color: #ff4436;
+  background-color: #ff0000;
 }
 
 .navy {
-  background-color: #3f51b5;
+  background-color: #ff0000;
 }
 
 .pink {
-  background-color: #f06292;
+  background-color: #ff0000;
 }
 
 .yellow {
-  background-color: #d8c24f;
+  background-color: #ff0000;
 }
 
 .border {
-  border: 4px solid #37cde1;
+  border: 4px solid #ff0000;
 }
 
 .highlight {
-  background-color: #72409c;
+  background-color: #ff0000;
 }
 
 .disabled {
