--- a/src/scouting/views/pages/form.ejs
+++ b/src/scouting/views/pages/form.ejs
@@ -29,4 +29,10 @@
   <button class="save">Save</button>
 </div>
 
+<div class="form">
+  <span class="demo">DEMO</span>
+</div>
+
+
+
 <script src="/js/form.js"></script>
